--- a/index.html
+++ b/index.html
@@ -18,16 +18,9 @@
 
       --radius: 14px;
       --maxw: 1100px;
-      --space-1: .4rem;
-      --space-2: .6rem;
-      --space-3: .85rem;
-      --space-4: 1.2rem;
-      --space-5: 1.6rem;
-      --space-6: 2rem;
 
-      --h1: clamp(1.5rem, 2vw, 2rem);
-      --h2: clamp(1.15rem, 1.5vw, 1.35rem);
-      --text-size: clamp(.9rem, 1vw, .95rem);
+      --h1: clamp(1.8rem, 3vw, 2.6rem);
+      --text-size: clamp(.95rem, 1vw, 1rem);
     }
 
     @media (prefers-color-scheme: dark) {
@@ -48,89 +41,89 @@
       margin: 0;
       background: var(--bg);
       color: var(--text);
-      font: 400 var(--text-size)/1.5 ui-sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI",
-            Roboto, "Helvetica Neue", Arial;
+      font-family: ui-sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI",
+                   Roboto, "Helvetica Neue", Arial;
       -webkit-font-smoothing: antialiased;
-    }
 
-    a { color: var(--link); text-decoration: none; }
-    a:hover { text-decoration: underline; }
+      /* new subtle gradient for depth */
+      background: linear-gradient(to bottom, var(--bg), var(--surface));
+    }
 
     .wrap {
       max-width: var(--maxw);
       margin: 0 auto;
-      padding: 0 var(--space-3);
+      padding: 0 1rem;
     }
 
     header.site {
-      padding: var(--space-6) 0 var(--space-4);
+      padding: 4rem 0 3rem;
       text-align: center;
+      animation: fadeIn 0.7s ease both;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
     }
 
     h1 {
       font-size: var(--h1);
-      margin: var(--space-2) 0;
+      margin-bottom: 0.4rem;
+      font-weight: 600;
     }
 
     .lead {
       color: var(--muted);
       max-width: 60ch;
-      margin: 0 auto;
+      margin: 0.5rem auto 2rem;
+      font-size: 1.05rem;
+    }
+
+    /* vertical button list */
+    .btn-list {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      align-items: center;
+      margin-top: 2rem;
     }
 
     .btn {
-      display: inline-block;
-      padding: .65rem 1.2rem;
-      margin: var(--space-2);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: min(260px, 90%);
+      padding: 0.9rem 1.4rem;
       background: var(--link);
       color: white;
       border-radius: var(--radius);
       font-weight: 500;
       text-decoration: none;
       box-shadow: var(--shadow);
-      transition: background .2s ease, transform .15s ease;
+      transition: 
+        background 0.2s ease, 
+        transform 0.15s ease,
+        box-shadow 0.2s ease;
+      position: relative;
+      overflow: hidden;
+    }
+
+    /* sliding highlight bar */
+    .btn::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: -100%;
+      width: 100%;
+      height: 100%;
+      background: rgba(255,255,255,0.18);
+      transform: skewX(-20deg);
+      transition: left 0.3s ease;
+    }
+
+    .btn:hover::before {
+      left: 100%;
     }
 
     .btn:hover {
       background: #1e4ed8;
-      transform: translateY(-1px);
-    }
-
-    .btn:focus-visible {
-      outline: 3px solid var(--ring);
-      outline-offset: 2px;
-    }
-
-    footer.site {
-      margin-top: var(--space-6);
-      padding: var(--space-4) 0;
-      color: var(--muted);
-      border-top: 1px solid var(--border);
-      text-align: center;
-    }
-  </style>
-</head>
-<body>
-
-  <header class="site wrap">
-    <h1>Andrei Zărie</h1>
-    <p class="lead">
-      Researcher and statistics specialist with expertise in user research, quantitative and qualitative methods,
-      and digital resource development.
-    </p>
-
-    <!-- Buttons -->
-    <a href="CV.html" class="btn">CV</a>
-    <a href="UX research portfolio.html" class="btn">UX Portfolio</a>
-    <a href="written-work.html" class="btn">Written Work</a>
-    <a href="https://ipstore.lincoln.ac.uk/product/fable" class="btn">Video Work</a>
-  </header>
-
-  <footer class="site">
-    <div class="wrap">
-      © 2025 • Andrei Zărie
-    </div>
-  </footer>
-
-</body>
-</html>
